@@ -26,6 +26,7 @@
 
 #include "common.h"
 #include "nut-scan.h"
+#include "nut_stdint.h"
 
 #ifdef WITH_IPMI
 
@@ -115,8 +116,23 @@ static char * (*nut_ipmi_ctx_errormsg) (ipmi_ctx_t ctx);
 static int (*nut_ipmi_ctx_close) (ipmi_ctx_t ctx);
 static void (*nut_ipmi_ctx_destroy) (ipmi_ctx_t ctx);
 
+/* This variable collects device(s) from a sequential or parallel scan,
+ * is returned to caller, and cleared to allow subsequent independent scans */
+static nutscan_device_t * dev_ret = NULL;
+#ifdef HAVE_PTHREAD
+static pthread_mutex_t dev_mutex;
+#endif
+
+/* use explicit booleans */
+#ifndef FALSE
+typedef enum ebool { FALSE = 0, TRUE } bool_t;
+#else
+typedef int bool_t;
+#endif
+
 /* Internal functions */
 static nutscan_device_t * nutscan_scan_ipmi_device(const char * IPaddr, nutscan_ipmi_t * sec);
+static void * nutscan_scan_ipmi_device_thready(void * arg_sec);
 
 /* Return 0 on error; visible externally */
 int nutscan_load_ipmi_library(const char *libname_path);
@@ -246,6 +262,7 @@ int nutscan_load_ipmi_library(const char *libname_path)
 	}
 
 	return 1;
+
 err:
 	fprintf(stderr,
 		"Cannot load IPMI library (%s) : %s. IPMI search disabled.\n",
@@ -602,6 +619,40 @@ nutscan_device_t * nutscan_scan_ipmi_device(const char * IPaddr, nutscan_ipmi_t 
 	return current_nut_dev;
 }
 
+/* Wrap calls to nutscan_scan_ipmi_device() into semantics for parallel-able
+ * scanning. Returns NULL, updates global dev_ret when a scan is successful.
+ * FREES the caller's copy of "sec" and "peername" in it, if applicable.
+ */
+static void * nutscan_scan_ipmi_device_thready(void * arg_sec)
+{
+	nutscan_device_t	*dev = NULL;
+	nutscan_ipmi_t	*sec = (nutscan_ipmi_t *)arg_sec;
+
+	if (sec == NULL || sec->peername == NULL)
+		dev = nutscan_scan_ipmi_device(NULL, NULL);
+	else
+		dev = nutscan_scan_ipmi_device(sec->peername, sec);
+
+	if (dev) {
+#ifdef HAVE_PTHREAD
+		pthread_mutex_lock(&dev_mutex);
+#endif
+		dev_ret = nutscan_add_device_to_device(dev_ret, dev);
+#ifdef HAVE_PTHREAD
+		pthread_mutex_unlock(&dev_mutex);
+#endif
+	}
+
+	if (sec) {
+		if (sec->peername) {
+			free(sec->peername);
+		}
+		free(sec);
+	}
+
+	return NULL;
+}
+
 /* General IPMI scan entry point: scan 1 to n devices, local or remote,
  * for IPMI support
  * Return NULL on error, or a valid nutscan_device_t otherwise */
@@ -635,27 +686,42 @@ nutscan_device_t * nutscan_scan_ipmi(const char * start_ip, const char * stop_ip
  * Return NULL on error, or a valid nutscan_device_t otherwise */
 nutscan_device_t * nutscan_scan_ip_range_ipmi(nutscan_ip_range_list_t * irl, nutscan_ipmi_t * sec)
 {
-	nutscan_ip_range_list_iter_t ip;
-	char * ip_str = NULL;
-	nutscan_ipmi_t * tmp_sec;
-	nutscan_device_t * nut_dev = NULL;
-	nutscan_device_t * current_nut_dev = NULL;
+	bool_t pass = TRUE; /* Track that we may spawn a scanning thread */
+	nutscan_device_t * result = NULL;
+	nutscan_ipmi_t * tmp_sec = NULL;
 
 	if (!nutscan_avail_ipmi) {
 		return NULL;
 	}
 
-	/* Are we scanning locally, or through the network? */
-	if (irl == NULL || irl->ip_ranges == NULL)
-	{
+	/* Are we scanning locally, or through the network?
+	 * We assume the list is maintained by our methods, so should not have
+	 * null addresses. But just in case - check for it a little tiny once.
+	 */
+	if (irl == NULL || irl->ip_ranges == NULL
+	 || irl->ip_ranges->start_ip == NULL || irl->ip_ranges->end_ip == NULL
+	) {
 		upsdebugx(1, "%s: Local PSU scan", __func__);
-		current_nut_dev = nutscan_scan_ipmi_device(NULL, NULL);
-	}
-	else {
-		/* TODO: Port HAVE_PTHREAD_TRYJOIN etc. from other files?
-		 * Notably, the scans below currently are only sequential
-		 * and so very slow (5 sec per IP timeout by default).
-		 */
+		nutscan_scan_ipmi_device_thready(NULL);
+	} else {
+		/* Iterate the one or a range of IPs to scan */
+		nutscan_ip_range_list_iter_t ip;
+		char * ip_str = NULL;
+
+#ifdef HAVE_PTHREAD
+# ifdef HAVE_SEMAPHORE
+		sem_t * semaphore = nutscan_semaphore();
+		sem_t   semaphore_scantype_inst;
+		sem_t * semaphore_scantype = &semaphore_scantype_inst;
+# endif /* HAVE_SEMAPHORE */
+		pthread_t thread;
+		nutscan_thread_t * thread_array = NULL;
+		size_t thread_count = 0, i;
+# if (defined HAVE_PTHREAD_TRYJOIN) || (defined HAVE_SEMAPHORE)
+		size_t  max_threads_scantype = max_threads_ipmi;
+# endif
+#endif
+
 		if (irl->ip_ranges_count == 1
 		&& (irl->ip_ranges->start_ip == irl->ip_ranges->end_ip
 		    || !strcmp(irl->ip_ranges->start_ip, irl->ip_ranges->end_ip)
@@ -666,22 +732,299 @@ nutscan_device_t * nutscan_scan_ip_range_ipmi(nutscan_ip_range_list_t * irl, nut
 			upsdebugx(1, "%s: Scanning remote PSU for IP address range(s): %s",
 				__func__, nutscan_stringify_ip_ranges(irl));
 		}
+
+#ifdef HAVE_PTHREAD
+		pthread_mutex_init(&dev_mutex, NULL);
+
+# ifdef HAVE_SEMAPHORE
+		if (max_threads_scantype > 0) {
+#ifdef HAVE_PRAGMAS_FOR_GCC_DIAGNOSTIC_IGNORED_UNREACHABLE_CODE
+#pragma GCC diagnostic push
+#endif
+#ifdef HAVE_PRAGMA_GCC_DIAGNOSTIC_IGNORED_UNREACHABLE_CODE
+#pragma GCC diagnostic ignored "-Wunreachable-code"
+#endif
+#ifdef __clang__
+#pragma clang diagnostic push
+#pragma clang diagnostic ignored "-Wunreachable-code"
+#endif
+			/* Different platforms, different sizes, none fits all... */
+			if (SIZE_MAX > UINT_MAX && max_threads_scantype > UINT_MAX) {
+#ifdef __clang__
+#pragma clang diagnostic pop
+#endif
+#ifdef HAVE_PRAGMAS_FOR_GCC_DIAGNOSTIC_IGNORED_UNREACHABLE_CODE
+#pragma GCC diagnostic pop
+#endif
+				upsdebugx(1,
+					"WARNING: %s: Limiting max_threads_scantype to range acceptable for sem_init()",
+					__func__);
+				max_threads_scantype = UINT_MAX - 1;
+			}
+
+			upsdebugx(4, "%s: sem_init() for %" PRIuSIZE " threads", __func__, max_threads_scantype);
+			if (sem_init(semaphore_scantype, 0, (unsigned int)max_threads_scantype)) {
+				upsdebug_with_errno(4, "%s: sem_init() failed", __func__);
+			}
+		}
+# endif /* HAVE_SEMAPHORE */
+
+#endif /* HAVE_PTHREAD */
+
 		ip_str = nutscan_ip_ranges_iter_init(&ip, irl);
 
 		while (ip_str != NULL) {
-			tmp_sec = malloc(sizeof(nutscan_ipmi_t));
-			memcpy(tmp_sec, sec, sizeof(nutscan_ipmi_t));
+#ifdef HAVE_PTHREAD
+			/* NOTE: With many enough targets to scan, this can crash
+			 * by spawning too many children; add a limit and loop to
+			 * "reap" some already done with their work. And probably
+			 * account them in thread_array[] as something to not wait
+			 * for below in pthread_join()...
+			 */
 
-			if ((current_nut_dev = nutscan_scan_ipmi_device(ip_str, tmp_sec)) != NULL) {
-				/* Store the positive result */
-				current_nut_dev = nutscan_add_device_to_device(current_nut_dev, nut_dev);
+# ifdef HAVE_SEMAPHORE
+			/* Just wait for someone to free a semaphored slot,
+			 * if none are available, and then/otherwise grab one
+			 */
+			if (thread_array == NULL) {
+				/* Starting point, or after a wait to complete
+				 * all earlier runners */
+				if (max_threads_scantype > 0)
+					sem_wait(semaphore_scantype);
+				sem_wait(semaphore);
+				pass = TRUE;
+			} else {
+				/* If successful (the lock was acquired),
+				 * sem_wait() and sem_trywait() will return 0.
+				 * Otherwise, -1 is returned and errno is set,
+				 * and the state of the semaphore is unchanged.
+				 */
+				int	stwST = sem_trywait(semaphore_scantype), stwS = sem_trywait(semaphore);
+				pass = ((max_threads_scantype == 0 || stwST == 0) && stwS == 0);
+				upsdebugx(4, "%s: max_threads_scantype=%" PRIuSIZE
+					" curr_threads=%" PRIuSIZE
+					" thread_count=%" PRIuSIZE
+					" stwST=%d stwS=%d pass=%d",
+					__func__, max_threads_scantype,
+					curr_threads, thread_count,
+					stwST, stwS, pass
+				);
 			}
-			/* Prepare the next iteration */
-			ip_str = nutscan_ip_ranges_iter_inc(&ip);
-		}
-	}
+# else
+#  ifdef HAVE_PTHREAD_TRYJOIN
+			/* A somewhat naive and brute-force solution for
+			 * systems without a semaphore.h. This may suffer
+			 * some off-by-one errors, using a few more threads
+			 * than intended (if we race a bit at the wrong time,
+			 * probably up to one per enabled scanner routine).
+			 */
 
-	return nutscan_rewind_device(current_nut_dev);
+			/* TOTHINK: Should there be a threadcount_mutex when
+			 * we just read the value in if() and while() below?
+			 * At worst we would overflow the limit a bit due to
+			 * other protocol scanners...
+			 */
+			if (curr_threads >= max_threads
+			|| (curr_threads >= max_threads_scantype && max_threads_scantype > 0)
+			) {
+				upsdebugx(2, "%s: already running %" PRIuSIZE " scanning threads "
+					"(launched overall: %" PRIuSIZE "), "
+					"waiting until some would finish",
+					__func__, curr_threads, thread_count);
+
+				while (curr_threads >= max_threads
+				   || (curr_threads >= max_threads_scantype && max_threads_scantype > 0)
+				) {
+					for (i = 0; i < thread_count ; i++) {
+						int ret;
+
+						if (!thread_array[i].active) continue;
+
+						pthread_mutex_lock(&threadcount_mutex);
+						upsdebugx(3, "%s: Trying to join thread #%i...", __func__, i);
+						ret = pthread_tryjoin_np(thread_array[i].thread, NULL);
+						switch (ret) {
+							case ESRCH:     /* No thread with the ID thread could be found - already "joined"? */
+								upsdebugx(5, "%s: Was thread #%" PRIuSIZE " joined earlier?", __func__, i);
+								break;
+							case 0:         /* thread exited */
+								if (curr_threads > 0) {
+									curr_threads --;
+									upsdebugx(4, "%s: Joined a finished thread #%" PRIuSIZE, __func__, i);
+								} else {
+									/* threadcount_mutex fault? */
+									upsdebugx(0, "WARNING: %s: Accounting of thread count "
+										"says we are already at 0", __func__);
+								}
+								thread_array[i].active = FALSE;
+								break;
+							case EBUSY:     /* actively running */
+								upsdebugx(6, "%s: thread #%" PRIuSIZE " still busy (%i)",
+									__func__, i, ret);
+								break;
+							case EDEADLK:   /* Errors with thread interactions... bail out? */
+							case EINVAL:    /* Errors with thread interactions... bail out? */
+							default:        /* new pthreads abilities? */
+								upsdebugx(5, "%s: thread #%" PRIuSIZE " reported code %i",
+									__func__, i, ret);
+								break;
+						}
+						pthread_mutex_unlock(&threadcount_mutex);
+					}
+
+					if (curr_threads >= max_threads
+					|| (curr_threads >= max_threads_scantype && max_threads_scantype > 0)
+					) {
+							usleep (10000); /* microSec's, so 0.01s here */
+					}
+				}
+				upsdebugx(2, "%s: proceeding with scan", __func__);
+			}
+
+			/* NOTE: No change to default "pass" in this ifdef:
+			 * if we got to this line, we have a slot to use */
+#  endif /* HAVE_PTHREAD_TRYJOIN */
+# endif  /* HAVE_SEMAPHORE */
+#endif   /* HAVE_PTHREAD */
+
+			if (pass) {
+				tmp_sec = malloc(sizeof(nutscan_ipmi_t));
+				if (tmp_sec == NULL) {
+					fprintf(stderr,
+						"Memory allocation error\n");
+					return NULL;
+				}
+				memcpy(tmp_sec, sec, sizeof(nutscan_ipmi_t));
+				tmp_sec->peername = ip_str;
+
+#ifdef HAVE_PTHREAD
+				if (pthread_create(&thread, NULL, nutscan_scan_ipmi_device_thready, (void*)tmp_sec) == 0) {
+					nutscan_thread_t	*new_thread_array;
+# ifdef HAVE_PTHREAD_TRYJOIN
+					pthread_mutex_lock(&threadcount_mutex);
+					curr_threads++;
+# endif /* HAVE_PTHREAD_TRYJOIN */
+
+					thread_count++;
+					new_thread_array = realloc(thread_array,
+						thread_count * sizeof(nutscan_thread_t));
+					if (new_thread_array == NULL) {
+						upsdebugx(1, "%s: Failed to realloc thread array", __func__);
+						break;
+					}
+					else {
+						thread_array = new_thread_array;
+					}
+					thread_array[thread_count - 1].thread = thread;
+					thread_array[thread_count - 1].active = TRUE;
+
+# ifdef HAVE_PTHREAD_TRYJOIN
+					pthread_mutex_unlock(&threadcount_mutex);
+# endif /* HAVE_PTHREAD_TRYJOIN */
+				}
+#else /* if not HAVE_PTHREAD */
+				nutscan_scan_ipmi_device_thready(tmp_sec);
+#endif /* if HAVE_PTHREAD */
+
+				/* Prepare the next iteration; note that
+				 * nutscan_scan_ipmi_device_thready()
+				 * takes care of freeing "tmp_sec" and its
+				 * reference (NOT strdup!) to "ip_str" as
+				 * peername.
+				 */
+				ip_str = nutscan_ip_ranges_iter_inc(&ip);
+			} else { /* if not pass -- all slots busy */
+#ifdef HAVE_PTHREAD
+# ifdef HAVE_SEMAPHORE
+				/* Wait for all current scans to complete */
+				if (thread_array != NULL) {
+					upsdebugx (2, "%s: Running too many scanning threads (%"
+						PRIuSIZE "), "
+						"waiting until older ones would finish",
+						__func__, thread_count);
+					for (i = 0; i < thread_count ; i++) {
+						int ret;
+						if (!thread_array[i].active) {
+							/* Probably should not get here,
+							 * but handle it just in case */
+							upsdebugx(0, "WARNING: %s: Midway clean-up: did not expect thread %" PRIuSIZE " to be not active",
+								__func__, i);
+							sem_post(semaphore);
+							if (max_threads_scantype > 0)
+								sem_post(semaphore_scantype);
+							continue;
+						}
+						thread_array[i].active = FALSE;
+						ret = pthread_join(thread_array[i].thread, NULL);
+						if (ret != 0) {
+							upsdebugx(0, "WARNING: %s: Midway clean-up: pthread_join() returned code %i",
+								__func__, ret);
+						}
+						sem_post(semaphore);
+						if (max_threads_scantype > 0)
+							sem_post(semaphore_scantype);
+					}
+					thread_count = 0;
+					free(thread_array);
+					thread_array = NULL;
+				}
+# else
+#  ifdef HAVE_PTHREAD_TRYJOIN
+				/* TODO: Move the wait-loop for TRYJOIN here? */
+#  endif /* HAVE_PTHREAD_TRYJOIN */
+# endif  /* HAVE_SEMAPHORE */
+#endif   /* HAVE_PTHREAD */
+			} /* if: could we "pass" or not? */
+		} /* while */
+
+#ifdef HAVE_PTHREAD
+		if (thread_array != NULL) {
+			upsdebugx(2, "%s: all planned scans launched, waiting for threads to complete", __func__);
+			for (i = 0; i < thread_count; i++) {
+				int ret;
+
+				if (!thread_array[i].active) continue;
+
+				ret = pthread_join(thread_array[i].thread, NULL);
+				if (ret != 0) {
+					upsdebugx(0, "WARNING: %s: Clean-up: pthread_join() returned code %i",
+						__func__, ret);
+				}
+				thread_array[i].active = FALSE;
+# ifdef HAVE_SEMAPHORE
+				sem_post(semaphore);
+				if (max_threads_scantype > 0)
+					sem_post(semaphore_scantype);
+# else
+#  ifdef HAVE_PTHREAD_TRYJOIN
+				pthread_mutex_lock(&threadcount_mutex);
+				if (curr_threads > 0) {
+					curr_threads --;
+					upsdebugx(5, "%s: Clean-up: Joined a finished thread #%" PRIuSIZE,
+						__func__, i);
+				} else {
+					upsdebugx(0, "WARNING: %s: Clean-up: Accounting of thread count "
+						"says we are already at 0", __func__);
+				}
+				pthread_mutex_unlock(&threadcount_mutex);
+#  endif /* HAVE_PTHREAD_TRYJOIN */
+# endif /* HAVE_SEMAPHORE */
+			}
+			free(thread_array);
+			upsdebugx(2, "%s: all threads freed", __func__);
+		}
+		pthread_mutex_destroy(&dev_mutex);
+
+# ifdef HAVE_SEMAPHORE
+		if (max_threads_scantype > 0)
+			sem_destroy(semaphore_scantype);
+# endif /* HAVE_SEMAPHORE */
+#endif /* HAVE_PTHREAD */
+	}	/* end of: scan range of 1+ IP address(es), maybe in parallel */
+
+	result = nutscan_rewind_device(dev_ret);
+	dev_ret = NULL;
+	return result;
 }
 
 #else /* not WITH_IPMI */
